--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="detail_button_desc_1">Don\'t watch it</string>
     <string name="detail_label_name">Device name</string>
     <string name="detail_label_id">Device id</string>
+    <string name="detail_label_plants_max">Max slots</string>
+    <string name="detail_label_plants_used">Slots used</string>
     <string name="detail_label_authority_0">You own the device.</string>
     <string name="detail_label_authority_1">You only watch the device. You can stop watching it.</string>
 
