--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,14 @@
     <string name="login_button_login">Login</string>
     <string name="login_button_register">Register</string>
 
+    <string name="form_water_level">Water level:</string>
+    <string name="form_time_label">Time of watering:</string>
+    <string name="form_add_button">Add new plant</string>
+
     <string name="toast_rename">Renaming in progress…</string>
     <string name="toast_error_names_equal">Device names are equal</string>
 
     <string name="error_login">Login unsuccessful. Try again.</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
